# mech_app

./: README about Models  README.md  pyproject.toml  requirements.txt  test_free_genai.py
app/: app.py
data/: sample.csv
examples/: genai_demo.py
scripts/: train.py
src/failure_predictor/: __init__.py  data.py  features.py  genai_analyzer.py  model.py
