[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "failure-predictor"
version = "0.1.0"
description = "Mechanical component failure prediction"
authors = [{name = "You"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"] 